--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7bddad">  <td>23/07/05 15:19:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ResumeUploadData.Browser()[pri:0, instance:resumeautomation.naukritestcases.ResumeUploadData@3972a855]">&gt;&gt;Browser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@363509958</td>   <td></td> </tr>
-<tr bgcolor="7bddad">  <td>23/07/05 15:19:37</td>   <td>13501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ResumeUploadData.naukri()[pri:0, instance:resumeautomation.naukritestcases.ResumeUploadData@3972a855]">naukri</td> 
-  <td>main@363509958</td>   <td></td> </tr>
-<tr bgcolor="7bddad">  <td>23/07/05 15:19:58</td>   <td>33859</td> <td>&nbsp;</td><td title="&lt;&lt;ResumeUploadData.closeBrowser()[pri:0, instance:resumeautomation.naukritestcases.ResumeUploadData@3972a855]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@363509958</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>23/07/07 15:55:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SslCertificateChromeAndFireFox.launchSSLInChrome()[pri:1, instance:seleniumtopics.SslCertificateChromeAndFireFox@3541cb24]">launchSSLInChrome</td> 
+  <td>main@2014461570</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>23/07/07 15:55:36</td>   <td>15859</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SslCertificateChromeAndFireFox.launchSSLEdge()[pri:2, instance:seleniumtopics.SslCertificateChromeAndFireFox@3541cb24]">launchSSLEdge</td> 
+  <td>main@2014461570</td>   <td></td> </tr>
 </table>
